compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_field_that_appears_in_an_imported_variant_has_note.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport some_mod\npub fn main(wibble: some_mod.Wibble) {\n  wibble.field\n}\n"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:4:9
  │
4 │   wibble.field
  │         ^^^^^^ This field does not exist

The value being accessed has this type:

    some_mod.Wibble

It does not have any fields.

Note: The field you are trying to access might not be consistently present
or positioned across the custom type's variants, preventing reliable
access. Ensure the field exists in the same position and has the same type
in all variants to enable direct accessor syntax.
