compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_field_that_does_not_appear_in_variant_has_no_note.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble {\n  Wibble(field: Int)\n  Wobble(not_field: String, field: Int)\n}\n\npub fn main(wibble: Wibble) {\n  wibble.wibble\n}\n"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:8:9
  │
8 │   wibble.wibble
  │         ^^^^^^^ This field does not exist

The value being accessed has this type:

    Wibble

It does not have any fields.
