compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_module.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: import xpto
---
error: Unknown module
  ┌─ /src/one/two.gleam:1:1
  │
1 │ import xpto
  │ ^^^^^^^^^^^ Did you mean `gleam`?

No module has been found with the name `xpto`.
