compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_module_suggest_typo_for_unimported_module.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  woble.wubble()\n}\n"
---
----- SOURCE CODE
-- wibble/wobble.gleam
pub fn wubble() {}

-- main.gleam

pub fn main() {
  woble.wubble()
}


----- ERROR
error: Unknown module
  ┌─ /src/one/two.gleam:3:3
  │
3 │   woble.wubble()
  │   ^^^^^

No module has been found with the name `woble`.

Hint: Did you mean to import `wibble/wobble` and reference `wobble`?
